[package]
name = "reth-cli-utils"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paradigmxyz/reth"
readme = "README.md"

[dependencies]
# Internal
reth-primitives = { path = "../../primitives" }
reth-consensus = { path = "../../consensus", features = ["serde"] }
reth-db = {path = "../../storage/db", features = ["mdbx", "test-utils"] }

# Serialiation
serde = "1.0"
serde_json = "1.0"
eyre = "0.6.8"
shellexpand = "2.1"
walkdir = "2.3"

# ethers type conversions
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }

# Tracing
tracing = "0.1"
